human-intervention-logs/org.mockito:mockito-core:5.0.0/gradle-test/gradle-test-2026-06-04T19-22-25-562290Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: org.mockito:mockito-core:5.0.0
Command: `/home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/3997-0a3eb1d1/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 1 busy and 1 incompatible and 14 stopped Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :checkKotlinGradlePluginConfigurationErrors SKIPPED
> Task :compileKotlin NO-SOURCE
> Task :tck-test-support:compileJava UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :tck-test-support:processResources NO-SOURCE
> Task :processResources NO-SOURCE
> Task :tck-test-support:classes UP-TO-DATE
> Task :classes UP-TO-DATE
> Task :jar UP-TO-DATE
> Task :tck-test-support:jar UP-TO-DATE
> Task :checkTestTimeoutAnnotations
> Task :processTestResources UP-TO-DATE
> Task :compileTestKotlin

> Task :compileTestJava FAILED
/home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/3997-0a3eb1d1/tests/src/org.mockito/mockito-core/5.0.0/src/test/java/org_mockito/mockito_core/InlineDelegateByteBuddyMockMakerInnerInlineConstructionMockContextTest.java:41: error: cannot find symbol
            Error unsupportedFeatureError = findUnsupportedFeatureError(exception);
                                            ^
  symbol:   method findUnsupportedFeatureError(Exception)
  location: class InlineDelegateByteBuddyMockMakerInnerInlineConstructionMockContextTest
/home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/3997-0a3eb1d1/tests/src/org.mockito/mockito-core/5.0.0/src/test/java/org_mockito/mockito_core/InlineDelegateByteBuddyMockMakerInnerInlineConstructionMockContextTest.java:76: error: method containsExactly in class AbstractIterableAssert<SELF,ACTUAL,ELEMENT,ELEMENT_ASSERT> cannot be applied to given types;
            assertThat(arguments.get()).containsExactly("alpha", helper, 7);
                                       ^
  required: CAP#1[]
  found:    String,Helper,int
  reason: varargs mismatch; String cannot be converted to CAP#1
  where SELF,ACTUAL,ELEMENT,ELEMENT_ASSERT are type-variables:
    SELF extends AbstractIterableAssert<SELF,ACTUAL,ELEMENT,ELEMENT_ASSERT> declared in class AbstractIterableAssert
    ACTUAL extends Iterable<? extends ELEMENT> declared in class AbstractIterableAssert
    ELEMENT extends Object declared in class AbstractIterableAssert
    ELEMENT_ASSERT extends AbstractAssert<ELEMENT_ASSERT,ELEMENT> declared in class AbstractIterableAssert
  where CAP#1 is a fresh type-variable:
    CAP#1 extends Object from capture of ?
2 errors

[Incubating] Problems report is available at: file:///home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/3997-0a3eb1d1/tests/src/org.mockito/mockito-core/5.0.0/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/3997-0a3eb1d1/tests/src/org.mockito/mockito-core/5.0.0/src/test/java/org_mockito/mockito_core/InlineDelegateByteBuddyMockMakerInnerInlineConstructionMockContextTest.java:41: error: cannot find symbol
              Error unsupportedFeatureError = findUnsupportedFeatureError(exception);
                                              ^
    symbol:   method findUnsupportedFeatureError(Exception)
    location: class InlineDelegateByteBuddyMockMakerInnerInlineConstructionMockContextTest
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
15 actionable tasks: 3 executed, 12 up-to-date

BUILD FAILED in 15s

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/3997-0a3eb1d1/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for org.mockito:mockito-core:5.0.0 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 17s
9 actionable tasks: 1 executed, 8 up-to-date
